# catch-the-wave-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
migrations/: 001_init.down.sql  001_init.up.sql
src/: dispatcher.rs  main.rs
src/core/: bot.rs  dispatcher.rs  fsm.rs  mod.rs
src/domain/: error.rs  interfaces.rs  mod.rs
src/domain/models/: current_meeting.rs  mod.rs  next_meeting.rs  profile.rs  quest.rs  task.rs  user.rs  user_task.rs  week.rs
src/domain/use_cases/: accept_meeting.rs  accept_task.rs  check_admin.rs  check_next_task.rs  complete_registration.rs  complete_task.rs  create_next_task.rs  create_quest.rs  create_task.rs  dto.rs  find_user_by_username.rs  get_active_users.rs  get_all_users.rs  get_current_meeting.rs  get_free_users.rs  get_menu_state.rs  get_next_meeting.rs  get_next_meeting_status.rs  get_ready_users.rs  get_user.rs  get_user_task.rs  mod.rs  promote.rs  registration.rs  reject_meeting.rs  reject_task.rs  start_registration.rs  user_registered.rs
src/presentation/handlers/: admin.rs  commands.rs  current_meeting.rs  fsm.rs  menu.rs  mod.rs  next_meeting.rs  registration.rs  texts.rs  utils.rs
src/services/: mod.rs
src/services/auth_service/: mock_auth_service.rs  mod.rs
src/services/quest_repository/: in_memory_quest_repository.rs  mod.rs
src/services/task_repository/: in_memory_task_repository.rs  mod.rs  postgres_task_repository.rs
src/services/user_repository/: in_memory_user_repository.rs  mod.rs  postgres_user_repository.rs  test.rs
src/services/week_service/: chrono_week_service.rs  mod.rs
(+15 files in other folders)
